<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.volodymyrbaisa.coffeecupcafe.ui.MainActivity">

    <ImageView
        style="@style/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/logo"
        style="@style/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/address">

        <ImageView
            style="@style/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_local_phone" />

        <TextView
            style="@style/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <TextView
            style="@style/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hours"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location" />

        <TextView
            style="@style/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            style="@style/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_location" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hours"
        style="@style/containerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/description">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                style="@style/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time" />

            <TextView
                style="@style/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours" />
        </LinearLayout>

        <TextView
            style="@style/text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/hours_list" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/line"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/slogan"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
